# anomly-detection

./: .gitignore  .pre-commit-config.yaml  README.md  enhanced_snn_experiment.py  mvp_rq1_experiment.py  pyproject.toml
anomaly_generation_testing/: ANOMALY_TESTING_DOCUMENTATION.md  README.md  comprehensive_anomaly_test.py
comprehensive_analysis/: README.md  comprehensive_analysis_results.csv  rq1_algorithm_comparison.py  rq1_feature_comparison.py  rq1_feature_comparison_analysis_summary.md  run_comprehensive_analysis.py
docs/: INDEX.md  MVSEC_Anomaly_Detection_Documentation.md  Project_Summary.md
docs/code_structure/: Code_Structure_Documentation.md
docs/diagrams/: system_architecture_diagram.py
mvp_experiment/: DOCUMENTATION_INDEX.md  ENHANCED_FEATURES_DOCUMENTATION.md  MVP_FEATURE_COMPARISON_README.md  README.md  TRAINING_PIPELINE_DOCUMENTATION.md  USAGE_EXAMPLES.md  enhanced_experiment_fixed.py  mvp_feature_comparison.py  test_enhanced_features.py
notebooks/: Notebook_Comparison_Analysis.tex  anomaly_detection.ipynb  rq1_spatiotemporal_vs_basic_features.ipynb
overleaf/: 2025_MA_Moeez_Thesis_Project_Plan.tex  MVSEC_Anomaly_Detection_Code_Guide.tex  README.md
