[project]
name = "all-llms"
version = "0.1.0"
description = ""
authors = [
    {name = "Moeez Bilal Ahmad",email = "moeez.bilal.ahmad@ericsson.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "tonic>=1.4.0",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "torchvision>=0.15.0",
    "seaborn>=0.12.0",
    "ipywidgets>=8.0.0",
    "h5py>=3.7.0",
    "requests>=2.28.0",
    "zipfile36>=0.1.3",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]

[tool.poetry]
packages = [{include = "all_llms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
