
[tool.poetry]
name = "anomly-detection"
version = "0.1.0"
description = "Neuromorphic Anomaly Detection Research"
authors = ["Moeez Bilal Ahmad <moeez.bilal.ahmad@ericsson.com>"]
readme = "README.md"
packages = [{include = "anomly-detection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = ">=2.0.0"
tonic = ">=1.4.0"
numpy = ">=1.22.0"
matplotlib = ">=3.5.0"
jupyter = ">=1.0.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.0.0"
tqdm = ">=4.62.0"
torchvision = ">=0.15.0"
seaborn = ">=0.12.0"
ipywidgets = ">=8.0.0"
h5py = ">=3.7.0"
requests = ">=2.28.0"
zipfile36 = ">=0.1.3"
opencv-python = ">=4.12.0.88,<5.0.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.0.0", extras = ["jupyter"]}
ruff = "^0.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
